--- a/Class4/题目讲解.md
+++ b/Class4/题目讲解.md
@@ -24,7 +24,7 @@ int main(){
 		printf("&c",a-'a'+'A');
 ```
 
-P5706 【深基2.例8】再分肥宅水
+## P5706 【深基2.例8】再分肥宅水
 
 ### 小潘的代码：
 
@@ -67,7 +67,9 @@ int main(){
 } 
 ```
 
-### 评价与建议：优秀
+### 评价与建议：
+
+优秀
 
 ## P1425 小鱼的游泳时间
 
@@ -183,7 +185,6 @@ int main(void)
 }
 ```
 
-
 ## P3954 [NOIP2017 普及组] 成绩
 
 ### 答案:
@@ -204,7 +205,35 @@ int main(void)
 }
 ```
 
-
 ## P5707 【深基2.例12】上学迟到
 
-### 答案：待会写：）
+### 答案：
+
+```c
+#include <stdio.h>
+
+int main(){
+    int s,v;
+    scanf("%d%d",&s,&v);
+
+    int cost = (s+v-1)/v;
+
+    int time = (24*60 + 7*60 + 50 - cost) % (24*60);
+  
+    printf("%02d:%02d",time/60,time%60);
+  
+    return 0;
+}
+```
+
+## 作业批改：
+
+### 表扬：
+
+* 没有犯常见的少“&”等低级错误，基本语法学得很好。
+* 提前预习学会了 if 选择判断语句，非常棒。
+
+#### 值得改进的点：
+
+* 注意变量的命名尽量体现其作用，如表示时间差的变量可以命名为dif ,而不是f
+* 注意空行的处理，删除的多余的，不需要的空行。在不同功能之间特意留出空行，使得程序更加规范易读。
