循环结构和分支结构提高题目的部分代码

--- a/Class6/选择结构习题讲解.md
+++ b/Class6/选择结构习题讲解.md
@@ -103,7 +103,6 @@ int main(){
 
 评价：非常好的代码。
 
-
 第六题：
 
 答案：
@@ -126,5 +125,26 @@ int main(){
 }
 ```
 
-
 第七题：
+
+
+### 循环结构习题：
+
+> 注意：本次习题**不允许使用AI工具**，如果不会请直接问小鲍，不管什么时间
+
+今天学到了循环结构，分支和循环是编程的两个重要逻辑结构。
+
+小潘很棒，鼓励自己一下。
+
+下面给出一个循环结构的代码例子：
+
+```c
+#include <stdio.h>
+
+int main() {
+    int bzh_love_pzw = 0 , time = 1;
+    while(time++) bzh_love_pzw++;
+
+    return 0;
+}
+```
